--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@
   font-size: large;
 }
 
+.table {
+  margin: 75px auto;
+}
+
+.table td {
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
